--- a/app/src/main/res/layout/activity_form_inspeksi.xml
+++ b/app/src/main/res/layout/activity_form_inspeksi.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
-        app:cardBackgroundColor="@color/grey0"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
