--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -222,6 +222,7 @@
                             android:clipToPadding="false">
 
                             <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/cvKorektif"
                                 android:layout_width="0dp"
                                 android:layout_height="0dp"
                                 android:clickable="true"
@@ -259,7 +260,7 @@
                                             android:fontFamily="@font/sfbold"
                                             android:textColor="@color/grey8"
                                             android:textSize="16sp"
-                                            android:text="Inspeksi"/>
+                                            android:text="Korektif"/>
 
                                     </LinearLayout>
 
