--- a/app/src/main/res/layout/activity_korektif.xml
+++ b/app/src/main/res/layout/activity_korektif.xml
@@ -59,7 +59,7 @@
                         android:layout_marginLeft="4dp"
                         android:layout_marginRight="8dp"
                         android:fontFamily="@font/sfmedium"
-                        android:text="Tipe Pekerjaan"
+                        android:text="Semua Pekerjaan"
                         android:textColor="@color/grey6"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +103,7 @@
                         android:layout_marginLeft="4dp"
                         android:layout_marginRight="8dp"
                         android:fontFamily="@font/sfmedium"
-                        android:text="Cabang"
+                        android:text="Semua Cabang"
                         android:textColor="@color/grey6"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -162,6 +162,7 @@
                         android:paddingBottom="12dp">
 
                         <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/cvTemuan"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:clickable="true"
@@ -223,7 +224,7 @@
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginBottom="8dp"
                                     android:fontFamily="@font/sfmedium"
-                                    android:text="6 September 2020"
+                                    android:text="5 Hari Lagi"
                                     android:textColor="@color/grey6"
                                     android:textSize="14sp"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -300,7 +301,7 @@
                                     android:layout_marginRight="8dp"
                                     android:layout_marginLeft="8dp"
                                     android:fontFamily="@font/sfbold"
-                                    android:text="Engsel Pintu"
+                                    android:text="Freon AC"
                                     android:textColor="@color/grey8"
                                     android:textSize="16sp"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -315,7 +316,7 @@
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginBottom="8dp"
                                     android:fontFamily="@font/sfmedium"
-                                    android:text="6 September 2020"
+                                    android:text="3 Hari Lagi"
                                     android:textColor="@color/grey6"
                                     android:textSize="14sp"
                                     app:layout_constraintBottom_toBottomOf="parent"
