--- a/app/src/main/res/layout/activity_detail_pekerjaan.xml
+++ b/app/src/main/res/layout/activity_detail_pekerjaan.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Isi Freon AC"
+            android:text="Inspeksi Kondisi AC"
             android:textColor="@color/grey8"
             android:fontFamily="@font/sfbold"
             android:textSize="24sp"/>
