--- a/app/src/main/res/drawable/bottomsheet_bg.xml
+++ b/app/src/main/res/drawable/bottomsheet_bg.xml
@@ -1,11 +1,18 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/grey7" />
+    <solid android:color="@color/white"/>
+
+    <padding
+        android:left="5dp"
+        android:top="5dp"
+        android:right="5dp"
+        android:bottom="5dp">
+    </padding>
 
     <corners
         android:topRightRadius="16dp"
-        android:topLeftRadius="16dp"
-        />
+        android:topLeftRadius="16dp">
+    </corners>
 
 </shape>
