--- a/app/src/main/res/layout/activity_detail_temuan.xml
+++ b/app/src/main/res/layout/activity_detail_temuan.xml
@@ -34,14 +34,27 @@
             app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
             <LinearLayout
+                android:id="@+id/linearLayout11"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@color/grey1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="H, 1:1"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_image_black_24dp"
+                android:tint="@color/grey6"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout11" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -225,6 +238,44 @@
 
             </LinearLayout>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/side_margin"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="@dimen/side_margin"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/sfregular"
+                    android:text="Aset"
+                    android:textColor="@color/grey6"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/sfmedium"
+                    android:text="ATM-CIMB-ASET002"
+                    android:textColor="@color/grey7"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -259,7 +310,7 @@
             android:orientation="vertical"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
 
         <com.google.android.material.button.MaterialButton
             style="@style/ButtonStyle"
