--- a/app/src/main/res/layout/activity_form_inspeksi.xml
+++ b/app/src/main/res/layout/activity_form_inspeksi.xml
@@ -207,6 +207,7 @@
         app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
         <LinearLayout
+            android:id="@+id/linearLayout8"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/grey1"
@@ -215,6 +216,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_image_black_24dp"
+            android:tint="@color/grey6"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout8"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout8" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
