--- a/app/src/main/res/layout/activity_form_temuan.xml
+++ b/app/src/main/res/layout/activity_form_temuan.xml
@@ -20,6 +20,7 @@
             app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
             <LinearLayout
+                android:id="@+id/linearLayout10"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@color/grey1"
@@ -27,6 +28,16 @@
                 app:layout_constraintDimensionRatio="H, 1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_image_black_24dp"
+                android:tint="@color/grey6"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/linearLayout10"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
