--- a/app/src/main/res/layout/activity_foto_sesudah_inspeksi.xml
+++ b/app/src/main/res/layout/activity_foto_sesudah_inspeksi.xml
@@ -211,6 +211,7 @@
         app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
         <LinearLayout
+            android:id="@+id/linearLayout9"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/grey1"
@@ -219,6 +220,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_image_black_24dp"
+            android:tint="@color/grey6"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
