--- a/app/src/main/res/layout/activity_korektif.xml
+++ b/app/src/main/res/layout/activity_korektif.xml
@@ -187,17 +187,27 @@
                                     app:layout_constraintTop_toTopOf="parent">
 
                                     <com.google.android.material.card.MaterialCardView
+                                        android:id="@+id/materialCardView7"
                                         android:layout_width="0dp"
                                         android:layout_height="0dp"
-                                        android:clickable="true"
-                                        android:backgroundTint="@color/grey6"
-                                        app:cardElevation="0dp"
+                                        android:backgroundTint="@color/colorPrimary"
                                         app:cardCornerRadius="0dp"
+                                        app:cardElevation="0dp"
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintDimensionRatio="H, 1:1"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent"/>
+                                        app:layout_constraintTop_toTopOf="parent" />
+
+                                    <ImageView
+                                        android:layout_width="60dp"
+                                        android:layout_height="60dp"
+                                        android:src="@drawable/ic_image_black_24dp"
+                                        android:tint="@color/colorPrimaryDark"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintEnd_toEndOf="@+id/materialCardView7"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toTopOf="@+id/materialCardView7" />
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -279,10 +289,10 @@
                                     app:layout_constraintTop_toTopOf="parent">
 
                                     <com.google.android.material.card.MaterialCardView
+                                        android:id="@+id/materialCardView8"
                                         android:layout_width="0dp"
                                         android:layout_height="0dp"
-                                        android:clickable="true"
-                                        android:backgroundTint="@color/grey6"
+                                        android:backgroundTint="@color/colorPrimary"
                                         app:cardElevation="0dp"
                                         app:cardCornerRadius="0dp"
                                         app:layout_constraintBottom_toBottomOf="parent"
@@ -290,6 +300,16 @@
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
                                         app:layout_constraintTop_toTopOf="parent"/>
+
+                                    <ImageView
+                                        android:layout_width="60dp"
+                                        android:layout_height="60dp"
+                                        android:src="@drawable/ic_image_black_24dp"
+                                        android:tint="@color/colorPrimaryDark"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintEnd_toEndOf="@+id/materialCardView8"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toTopOf="@+id/materialCardView8" />
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
