--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -185,7 +185,7 @@
                                         <ImageView
                                             android:layout_width="96dp"
                                             android:layout_height="96dp"
-                                            android:src="@drawable/ic_active_service"/>
+                                            android:src="@drawable/ic_info"/>
 
                                         <TextView
                                             android:layout_width="match_parent"
@@ -250,7 +250,7 @@
                                         <ImageView
                                             android:layout_width="96dp"
                                             android:layout_height="96dp"
-                                            android:src="@drawable/ic_active_service"/>
+                                            android:src="@drawable/ic_wrench_2"/>
 
                                         <TextView
                                             android:layout_width="match_parent"
